exports[`Rich Text Lists > Unordered List (UL) > should preserve current marks when inserting a new li #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "bold"
                    }
                  ],
                  "nodeType": "text",
                  "value": "bold "
                },
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "italic"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "more italic text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > should preserve current marks when inserting a new li #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "bold"
                    }
                  ],
                  "nodeType": "text",
                  "value": "bold "
                },
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "italic"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [
                    {
                      "type": "italic"
                    }
                  ],
                  "nodeType": "text",
                  "value": "more italic text"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > should move nested list items when parent is invalid #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "2"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "4"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > should move nested list items when parent is invalid #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "1"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        },
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "2"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "4"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > does not remove entity cards when toggling off a list #0`] =
{
  "content": [
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "example-entity-id",
            "linkType": "Entry",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-entry-block"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > backspace at the start of li should reset the item #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "abc"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > backspace at the start of li should reset the item #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "abc"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > backspace on empty li at the beginning of doc should work #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > backspace on empty li at the beginning of doc should work #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > switching off the list > it raises the non-first list item entirely #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "A paragraph"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "Another paragraph"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "example-entity-id",
            "linkType": "Entry",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-entry-block"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "Another paragraph again"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": ""
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "unordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > switching off the list > it raises the list item entirely #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "A paragraph"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "example-entity-id",
            "linkType": "Entry",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-entry-block"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Ordered List (OL) > switching off the list > it raises the non-first list item entirely #0`] =
{
  "content": [
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "A paragraph"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [],
              "data": {
                "target": {
                  "sys": {
                    "id": "example-entity-id",
                    "linkType": "Entry",
                    "type": "Link"
                  }
                }
              },
              "nodeType": "embedded-entry-block"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "Another paragraph"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "example-entity-id",
            "linkType": "Entry",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-entry-block"
    },
    {
      "content": [
        {
          "content": [
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": "Another paragraph again"
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            },
            {
              "content": [
                {
                  "data": {},
                  "marks": [],
                  "nodeType": "text",
                  "value": ""
                }
              ],
              "data": {},
              "nodeType": "paragraph"
            }
          ],
          "data": {},
          "nodeType": "list-item"
        }
      ],
      "data": {},
      "nodeType": "ordered-list"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};

exports[`Rich Text Lists > Unordered List (UL) > switching off the list > it raises the list item entirely #0`] =
{
  "content": [
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": "A paragraph"
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [],
      "data": {
        "target": {
          "sys": {
            "id": "example-entity-id",
            "linkType": "Entry",
            "type": "Link"
          }
        }
      },
      "nodeType": "embedded-entry-block"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    },
    {
      "content": [
        {
          "data": {},
          "marks": [],
          "nodeType": "text",
          "value": ""
        }
      ],
      "data": {},
      "nodeType": "paragraph"
    }
  ],
  "data": {},
  "nodeType": "document"
};
